--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "lokielse/laravel-admin",
-  "description": "AngularJs-Bootstrap-SBAdmin for Laravel 5",
+  "name": "lokielse/laravel-console",
+  "description": "Console with AngularJs-Bootstrap-SBAdmin for Laravel 5",
   "keywords": [
     "lokielse",
-    "laravel-admin"
+    "laravel-console"
   ],
-  "homepage": "https://github.com/lokielse/laravel-admin",
+  "homepage": "https://github.com/lokielse/laravel-console",
   "license": "MIT",
   "authors": [
     {
@@ -20,17 +20,15 @@
     "php": ">=5.3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*",
-    "scrutinizer/ocular": "~1.1"
   },
   "autoload": {
     "psr-4": {
-      "Lokielse\\Admin\\": "src"
+      "Lokielse\\Console\\": "src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Lokielse\\Admin\\Test\\": "tests"
+      "Lokielse\\Console\\Test\\": "tests"
     }
   },
   "scripts": {
